@@ -3,6 +3,8 @@
 
 - Fixed issue #14473: ezcPersistentFindIterator does not overwrite object
   instances anymore.
+- Fixed issue #14505: Property converters don't break the state of newly saved
+  objects anymore.
 
 
 1.5 - Monday 05 January 2009
